Updated documentation and squashed the remaining bugs

--- a/src/sass/space/_space.scss
+++ b/src/sass/space/_space.scss
@@ -109,6 +109,12 @@
                     cursor: pointer;
                 }
             }
+            .error-message {
+                margin: 12px 0;
+
+                color: $error-color;
+                text-align: center;
+            }
             .buttons {
                 margin-top: 24px;
 
